<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lin_btn_one"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="2">


            <Button
                android:id="@+id/btn_income"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/income"
                android:padding="0dp"/>

            <Button
                android:id="@+id/btn_receive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/receive" />

            <Button
                android:id="@+id/btn_sell"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sell" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_txt_one"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_btn_one"
            app:layout_constraintVertical_weight="1">

            <TextView
                android:id="@+id/txt_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />

            <TextView
                android:id="@+id/txt_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />

            <TextView
                android:id="@+id/txt_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />
        </LinearLayout>

        //-------------------------------------------

        <LinearLayout
            android:id="@+id/lin_btn_tow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_txt_one"
            app:layout_constraintVertical_weight="2">


            <Button
                android:id="@+id/btn_cost"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cost" />

            <Button
                android:id="@+id/btn_pay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pay" />

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_txt_two"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_btn_tow"
            app:layout_constraintVertical_weight="1">

            <TextView
                android:id="@+id/txt_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />

            <TextView
                android:id="@+id/txt_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />

            <TextView
                android:id="@+id/txt_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />
        </LinearLayout>

        //-------------------------------------------

        <LinearLayout
            android:id="@+id/lin_btn_thr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_txt_two"
            app:layout_constraintVertical_weight="2">


            <Button
                android:id="@+id/btn_installment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/installment" />



            <Button
                android:id="@+id/btn_checks"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/check" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_txt_thr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_btn_thr"
            app:layout_constraintVertical_weight="1">

            <TextView
                android:id="@+id/txt_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />



            <TextView
                android:id="@+id/txt_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />
        </LinearLayout>



        //========================================================================
        <TextView
            android:id="@+id/jst_lin"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lin_txt_thr"
            android:background="@color/cardview_dark_background"/>
//===================================================================================


        <LinearLayout
            android:id="@+id/lin_btn_fur"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jst_lin"
            android:layout_marginTop="32dp"
            app:layout_constraintVertical_weight="2">

            <Button
                android:id="@+id/btn_bnk_acnt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/account" />


            <Button
                android:id="@+id/btn_customer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/customer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_txt_fur"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_btn_fur"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_weight="2">

            <TextView
                android:id="@+id/txt_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />


            <TextView
                android:id="@+id/txt_10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_btn_fiv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_txt_fur"
            android:layout_marginTop="16dp"
            app:layout_constraintVertical_weight="2">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/edit" />


            <Button
                android:id="@+id/btn_wrhus_prdct"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wrhus_prdct" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_txt_fiv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_btn_fiv"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_weight="2">

            <TextView
                android:id="@+id/txt_11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />


            <TextView
                android:id="@+id/txt_12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_btn_six"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_txt_fiv"
            android:layout_marginTop="16dp"
            app:layout_constraintVertical_weight="2">

            <Button
                android:id="@+id/btn_report"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/report" />
            <TextView
                android:id="@+id/txt_13"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Button"
                />


        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>







</ScrollView>